fix authorization tab: - define and use types auth tab - set auth default empty state for new request - fix buggy update listeners - implement no_auth screen - fix layout - border, gaps, paddings - based on designs - add basic view in collection tab. will add functionality in the following commit (requires rewrite of the API of the view component) - refactor and cleanup code

--- a/app/src/features/apiClient/screens/apiClient/components/clientView/components/Collection/collectionView.scss
+++ b/app/src/features/apiClient/screens/apiClient/components/clientView/components/Collection/collectionView.scss
@@ -2,10 +2,16 @@
   width: 100%;
   height: 100%;
 
+  padding: 8px 16px;
+
   .collection-view-content {
     width: 100%;
     height: calc(100% - 35px);
     overflow-y: hidden;
+
+    .ant-tabs {
+      height: 100%;
+    }
 
     .ant-tabs-nav {
       margin-bottom: 8px;
